third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/append_dummy.stderr
error: append_dummy test
 --> tests/ui/append_dummy.rs:8:15
  |
8 | append_dummy!(need_default);
  |               ^^^^^^^^^^^^
